# superpoint

./: .gitignore  Makefile  README.md  conda_env.yaml  pyproject.toml
src/: prepare_synthetic_dataset.py  utils.py
tests/: test_prepare_synthetic_dataset.py
