[project]
name = "superpoint"
version = "0.0.1"
description = ""
readme = "README.md"


[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
output-format = "full"
show-fixes = true
exclude = [
  "data",
]


[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E402"]
preview = true
explicit-preview-rules = true